Removed all new project added files

--- a/SVU/SVU.Web.UI/SVU.Web.UI.csproj
+++ b/SVU/SVU.Web.UI/SVU.Web.UI.csproj
@@ -11,4 +11,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="wwwroot\favicon.ico" />
+  </ItemGroup>
+
 </Project>
