Done database setup

--- a/SVU/SVU.Web.UI/SVU.Web.UI.csproj
+++ b/SVU/SVU.Web.UI/SVU.Web.UI.csproj
@@ -21,4 +21,9 @@
     <None Include="wwwroot\favicon.ico" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\SVU.Database\SVU.Database.csproj" />
+  </ItemGroup>
+
 </Project>
