--- a/SVU/SVU.Web.UI/appsettings.json
+++ b/SVU/SVU.Web.UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Development": "Data Source=.;initial catalog = svuDb;integrated security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
