Fixed desig and code bugs

--- a/SVU/SVU.Web.UI/appsettings.json
+++ b/SVU/SVU.Web.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Development": "Data Source=.;initial catalog = svuDb;integrated security=True"
+    "Development": "Server=35.168.118.12,1433;Database=svuDb;User Id=saria;Password=Saro5540462;"
   },
   "Logging": {
     "LogLevel": {
