Done tennis ssas demo

--- a/SVU/SVU.Web.UI/appsettings.json
+++ b/SVU/SVU.Web.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Development": "Server=35.168.118.12,1433;Database=svuDb;User Id=saria;Password=Saro5540462;"
+    "Development": "Server=35.168.118.12,1433;Database=svuDb;User Id=onlyReadSvu;Password=OnlyReadSvu1;"
   },
   "Logging": {
     "LogLevel": {
