Added CRUD operations for blogs

--- a/SVU/SVU.Web.UI/appsettings.json
+++ b/SVU/SVU.Web.UI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Development": "Server=35.168.118.12,1433;Database=svuDb;User Id=onlyReadSvu;Password=OnlyReadSvu1;"
+    "Development": "Server=35.168.118.12,1433;Database=svuDb;User Id=saria;Password=-4e)M[/]gpt/9PEb;",
+    "Development2": "Server=35.168.118.12,1433;Database=svuDb;User Id=onlyReadSvu;Password=OnlyReadSvu1;"
   },
   "Logging": {
     "LogLevel": {
