--- a/SVU/SVU.Web.UI/SVU.Web.UI.csproj
+++ b/SVU/SVU.Web.UI/SVU.Web.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Captcha" Version="4.4.2" />
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
