--- a/Second Semester/AMW/AMW.API.Framework/AMW.API.Framework.csproj
+++ b/Second Semester/AMW/AMW.API.Framework/AMW.API.Framework.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AMW.Core\AMW.Core.csproj" />
+  </ItemGroup>
+
 </Project>
