--- a/Second Semester/AMW/AMW.API/Properties/launchSettings.json
+++ b/Second Semester/AMW/AMW.API/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     "AMW.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
