--- a/Second Semester/AMW/AMW.Shared/AMW.Shared.csproj
+++ b/Second Semester/AMW/AMW.Shared/AMW.Shared.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
