Added Cors in dev settings

--- a/Second Semester/AMW/AMW.API/appsettings.Development.json
+++ b/Second Semester/AMW/AMW.API/appsettings.Development.json
@@ -1,4 +1,18 @@
 {
+
+  "Cors": {
+    "policy": {
+      "active": "dev",
+      "dev": {
+        "ExposedHeaders": [ "" ],
+        "AllowedOrigins": [ "*" ],
+        "AllowedHeaders": [ "*" ],
+        "AllowedMethods": [ "*" ],
+        "SupportsCredentials": false
+
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
